k8s/clusters/lab/apps/open-webui/statefulset-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
  namespace: open-webui
spec:
  template:
    spec:
      hostAliases:
        - ip: "192.168.8.50"
          hostnames:
            - "auth.jaxon.cloud"
